syntax = "proto3";

package lemmerelassal.v1.pbflutter;

import "google/protobuf/any.proto";

option go_package = "github.com/lemmerelassal/PBFlutter;lemmerelassal_v1_pbflutter";


message PBColor { // to be clear: this is a parameter of the Style widget, i.e.: not proper English.
    int32 red = 1;
    int32 green = 2;
    int32 blue = 3;
    float opacity = 4;
}

message PBSVG {
    bytes picture = 1;
    float height = 2;
}

message PBColumn {
    repeated google.protobuf.Any children = 1;
}

message PBAlign {
    google.protobuf.Any child = 1;
    float align_x = 2; // -1.0 to +1.0
    float align_y = 3; // -1.0 to +1.0
}

message PBText {
    string text = 1;
    float font_size = 2;
    PBColor colour = 3;  // this is proper English.
}

message PBSize {
    float width = 1;
    float height = 2;
}

message PBPreferredSizeWidget {
    google.protobuf.Any child = 1;
    PBSize preferred_size = 2;
}

message PBSliverAppBar {
    google.protobuf.Any leading = 1;
    PBColor background_color = 2;
    google.protobuf.Any flexible_space = 3;
    float expanded_height = 4;
    bool pinned = 5;
    bool floating = 6;
    float elevation = 7;
    bool force_elevated = 8;
    PBPreferredSizeWidget bottom = 9;
}

message PBIconButton {
    PBIcon icon = 1;
    string on_pressed = 2;
}

enum PBCollapseMode {
    COLLAPSE_MODE_INVALID = 0;
    COLLAPSE_MODE_PARALLAX = 1;
    COLLAPSE_MODE_PIN = 2;
    COLLAPSE_MODE_NONE = 3;
}

message PBFlexibleSpaceBar {
    PBCollapseMode collapse_mode = 1;
    google.protobuf.Any background = 2;
}

message PBIconData {
    int32 code_point = 1;
    string font_family = 2;
    bool match_text_direction = 3;
}

message PBIcon {
    PBIconData icon = 1;
    PBColor color = 2;
}

message PBTabBar {
   repeated google.protobuf.Any tabs = 1;
 // controller also necessary but how?
}

message PBTab {
    string text = 1;
    google.protobuf.Any icon = 2;
}

message PBTabBarView {
    repeated google.protobuf.Any children = 1;
    // controller also necessary but how?
}

message PBWrap {
    repeated google.protobuf.Any children = 1;
}

message PBScaffold {
    google.protobuf.Any body = 1;
}